maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:31: error: type mismatch;
 found   : plm.universe.Direction
 required: String
    g=Direction.NORD
                ^Escaper:34: error: type mismatch;
 found   : plm.universe.Direction
 required: String
    g=Direction.EST
                ^